# wl-harmonograph

./: .gitignore  Cargo.toml  README.md  flake.nix
.pi/: prompt-history.jsonl
noctalia-plugin/: Main.qml  Settings.qml  manifest.json  settings.json
src/: ascii.rs  control.rs  harmonograph.rs  lib.rs  main.rs
src/shapes/: butterfly.rs  clifford.rs  dejong.rs  dopendulum.rs  guilloche.rs  harmonograph.rs  lissajous.rs  lorenz.rs  mod.rs  rose.rs  rossler.rs  spirograph.rs  superformula.rs  surface.rs  torusknot.rs  wireframe.rs
